--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bootstrap": "^3.3.5",
     "chai": "^3.2.0",
     "file-loader": "^0.8.4",
+    "firebase": "^2.3.0",
     "karma-chai": "^0.1.0",
     "karma-es5-shim": "0.0.4",
     "karma-sinon": "^1.0.4",
